buy revit commit #1

--- a/index.html
+++ b/index.html
@@ -14,11 +14,104 @@
 
 <body>
 
-    <button>Open</button>
+    <div class="container">
 
-    <div class="card">
-        <span class="title">Short Content</span>
-        <div class="main">This is much linger content that takes up much more space</div>
+        <div class="buy-component">
+            <div class="buy-component__top">
+                <h2>Buy Revit</h2>
+            </div>
+
+            <div class="buy-component__tabs">
+                <div class="buy-component__tab --1">
+                    <button>Subscription</button>
+                </div>
+                <div class="buy-component__tab --2">
+                    <button>Flex <span>NEW</span></button>
+                </div>
+            </div>
+
+            <div class="select-term">
+                <div class="select-term__first">
+                    <div class="select-term__title">
+                        <h3>Select A Term</h3>
+                    </div>
+                    <div class="select-term__subtitle"><svg focusable="false" aria-hidden="true" viewBox="0 0 24 24"
+                            type="default" xmlns="http://www.w3.org/2000/svg">
+                            <g id="utility/favorite">
+                                <path id="stroke" fill="none"
+                                    d="M15.2993 8.29405L12.0291 2L8.75867 8.29405H2L6.8853 13.9785L4.68307 21.0672L12.0291 17.2248L19.2472 21.0672L17.045 13.9785L22 8.29405H15.2993Z"
+                                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round"></path>
+                            </g>
+                        </svg>
+                        Savings of 34% compared to monthly price</div>
+                    <div class="select-term__cards">
+
+                        <div class="select-term__card --first">
+                            <span>3 year</span>
+                            <p>$8,730</p>
+                            <span>Pay annually <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wi5lsp"
+                                    focusable="false" aria-hidden="true" viewBox="0 0 24 24" type="default"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g id="utility/favorite">
+                                        <path id="stroke" fill="none"
+                                            d="M15.2993 8.29405L12.0291 2L8.75867 8.29405H2L6.8853 13.9785L4.68307 21.0672L12.0291 17.2248L19.2472 21.0672L17.045 13.9785L22 8.29405H15.2993Z"
+                                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                            stroke-linejoin="round"></path>
+                                    </g>
+                                </svg></span>
+                        </div>
+                        <div class="select-term__card --second">
+                            <span>1 year</span>
+                            <p>$2,910</p>
+                            <span>Most popular <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wi5lsp"
+                                    focusable="false" aria-hidden="true" viewBox="0 0 24 24" type="default"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g id="utility/favorite">
+                                        <path id="stroke" fill="none"
+                                            d="M15.2993 8.29405L12.0291 2L8.75867 8.29405H2L6.8853 13.9785L4.68307 21.0672L12.0291 17.2248L19.2472 21.0672L17.045 13.9785L22 8.29405H15.2993Z"
+                                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                            stroke-linejoin="round"></path>
+                                    </g>
+                                </svg></span>
+                        </div>
+                        <div class="select-term__card --third">
+                            <span>1 month</span>
+                            <p>$365</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="select-term__second">
+                    <div class="select-term__top">$8,730<span>/3 years for 1 user (pay annually)</span></div>
+                    <div class="select-term__button-add"><button class="add-cart">
+                            <h2>ADD TO CART</h2><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
+                                <g id="utility/caret-right">
+                                    <path id="stroke" d="M9.5 6L15.5 12L9.5 18" stroke="currentColor" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </g>
+                            </svg>
+                        </button></div>
+                    <div class="select-term__bottom">Credit and debit cards, PayPal, Pay by Bank and direct debit (ACH)
+                        accepted. <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330">
+                            <g>
+                                <path
+                                    d="M165,0C74.019,0,0,74.02,0,165.001C0,255.982,74.019,330,165,330s165-74.018,165-164.999C330,74.02,255.981,0,165,0z
+                                M165,300c-74.44,0-135-60.56-135-134.999C30,90.562,90.56,30,165,30s135,60.562,135,135.001C300,239.44,239.439,300,165,300z" />
+                                <path d="M164.998,70c-11.026,0-19.996,8.976-19.996,20.009c0,11.023,8.97,19.991,19.996,19.991
+                               c11.026,0,19.996-8.968,19.996-19.991C184.994,78.976,176.024,70,164.998,70z" />
+                                <path d="M165,140c-8.284,0-15,6.716-15,15v90c0,8.284,6.716,15,15,15c8.284,0,15-6.716,15-15v-90C180,146.716,173.284,140,165,140z
+                               " />
+                            </g>
+                        </svg></div>
+                </div>
+
+            </div>
+
+        </div>
     </div>
 
     <script src="./js/index.js"></script>
