--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             Savings of 34% compared to monthly price</div>
                         <div class="select-term__cards">
 
-                            <div class="select-term__card">
+                            <button class="select-term__card" data-select="first">
                                 <span>3 year</span>
                                 <p>$8,730</p>
                                 <span>Pay annually <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wi5lsp"
@@ -61,8 +61,8 @@
                                                 stroke-linejoin="round"></path>
                                         </g>
                                     </svg></span>
-                            </div>
-                            <div class="select-term__card">
+                            </button>
+                            <button class="select-term__card" data-select="second">
                                 <span>1 year</span>
                                 <p>$2,910</p>
                                 <span>Most popular <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wi5lsp"
@@ -75,18 +75,20 @@
                                                 stroke-linejoin="round"></path>
                                         </g>
                                     </svg></span>
-                            </div>
-                            <div class="select-term__card">
+                            </button>
+                            <button class="select-term__card" data-select="third">
                                 <span>1 month</span>
                                 <p>$365</p>
-                            </div>
+                            </button>
 
                         </div>
 
                     </div>
 
                     <div class="select-term__second">
-                        <div class="select-term__top --selected" data-term="first"><span class="price-text-buy">$8,730</span><span class="desk-text-buy">/3 years for 1 user (pay annually)</span></div>
+                        <div class="select-term__top --selected" data-term="first"><span
+                                class="price-text-buy">$8,730</span><span class="desk-text-buy">/3 years for 1 user (pay
+                                annually)</span></div>
                         <!-- <div class="select-term__top" data-term="second"><span class="price-text-buy">$2,910</span><span class="desk-text-buy">/year for 1 user</span></div>
                         <div class="select-term__top" data-term="third"><span class="price-text-buy">$365</span><span class="desk-text-buy">/month for 1 user</span></div> -->
                         <button class="select-term__button-add">
