--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                             <button class="select-term__card" data-select="first">
                                 <span>3 year</span>
-                                <p>$8,730</p>
+                                <p class="price-one" data-price="first">???</p>
                                 <span>Pay annually <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wi5lsp"
                                         focusable="false" aria-hidden="true" viewBox="0 0 24 24" type="default"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -64,7 +64,7 @@
                             </button>
                             <button class="select-term__card" data-select="second">
                                 <span>1 year</span>
-                                <p>$2,910</p>
+                                <p class="price-two" data-price="second">???</p>
                                 <span>Most popular <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wi5lsp"
                                         focusable="false" aria-hidden="true" viewBox="0 0 24 24" type="default"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -78,7 +78,7 @@
                             </button>
                             <button class="select-term__card" data-select="third">
                                 <span>1 month</span>
-                                <p>$365</p>
+                                <p class="price-three" data-price="third">???</p>
                             </button>
 
                         </div>
