--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
                     </div>
 
                     <div class="select-term__second">
-                        <div class="select-term__top --selected" data-term="first"><span
-                                class="price-text-buy" id="price-buy-2">$8,730</span></div>
+                        <div class="select-term__top --selected" data-term="first"><span class="price-text-buy"
+                                id="price-buy-2">$8,730</span></div>
                         <div class="select-term__buttons-buy">
-                            <button class="buttons-buy-tokens">Buy tokens</button>
-                            <button class="buttons-buy-flex">Learn how Flex works</button>
+                            <button class="buttons-buy-tokens --btn-buy">Buy tokens</button>
+                            <button class="buttons-buy-flex --btn-buy">Learn how Flex works</button>
                         </div>
                         <div class="select-term__bottom">
                             <p>Tokens expire 1 year from date of purchase. Not all products and features are available
