--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                                 <span>1 year</span>
                                 <p>???</p>
                                 <span>Most popular <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wi5lsp"
-                                        focusable="false" aria-hidden="true" viewBox="0 0 24 24" type="default"
-                                        xmlns="http://www.w3.org/2000/svg">
+                                        viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                         <g id="utility/favorite">
                                             <path id="stroke" fill="none"
                                                 d="M15.2993 8.29405L12.0291 2L8.75867 8.29405H2L6.8853 13.9785L4.68307 21.0672L12.0291 17.2248L19.2472 21.0672L17.045 13.9785L22 8.29405H15.2993Z"
