--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <title>AutoDesk Revit</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -202,8 +201,7 @@
 
             <div class="buy-component__footer" data-tab="first">
                 <div class="buy-component__nav">
-                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                            id="icon-svg-incentive-30-day" viewBox="0 0 40 40">
+                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
                             <path class="cls-1"
                                 d="M16.50861,22.32a2.8853,2.8853,0,0,1-.96-.76l.68-.64a2.11964,2.11964,0,0,0,1.64.76,1.70607,1.70607,0,0,0,.96-.24.905.905,0,0,0,.36-.8V20.4a.77508.77508,0,0,0-.44-.76,1.85812,1.85812,0,0,0-.92-.24h-.6v-.84h.6a1.69119,1.69119,0,0,0,.8-.2.67857.67857,0,0,0,.36-.64v-.2a.72655.72655,0,0,0-.32-.64,1.57542,1.57542,0,0,0-.8-.2,1.85524,1.85524,0,0,0-.84.16,2.86414,2.86414,0,0,0-.76.52l-.64-.64a3.7256,3.7256,0,0,1,1.04-.72,3.17733,3.17733,0,0,1,1.28-.24,3.47021,3.47021,0,0,1,1.12.2,1.93238,1.93238,0,0,1,.8.56,1.2555,1.2555,0,0,1,.28.84v.36a1.1702,1.1702,0,0,1-.32.76,1.96042,1.96042,0,0,1-.8.44,1.88577,1.88577,0,0,1,.6.24,1.49784,1.49784,0,0,1,.52.48,1.04712,1.04712,0,0,1,.2.68v.44a1.724,1.724,0,0,1-.32.96,2.172,2.172,0,0,1-.88.68,3.11617,3.11617,0,0,1-1.24.24A5.58528,5.58528,0,0,1,16.50861,22.32Z" />
                             <path class="cls-1"
@@ -213,8 +211,7 @@
                             <path class="cls-1"
                                 d="M20.02861,40l-.36-.08c-.16-.04-.2-.08-.24-.08l-.04-.04-.04-.04c-20.16-9.32-17.2-33.04-17.04-34.04a.94485.94485,0,0,1,.92-.8c11.88,0,15-2.92,15.76-4.16,0,0,.6-.76,1.2-.76.56,0,1,.56,1.16.72,1.56,1.52,5.72,4.2,15.48,4.2a.87215.87215,0,0,1,.88.8c.12,1,3.12,24.68-17.08,34.08h-.08c-.08.04-.12.04-.16.08-.2.08-.28.08-.32.12Zm-.32-37.24c-1.72,1.68-5.68,3.76-14.96,3.96h-.76l-.04.76c-.4,6.64.4,22.92,15.68,30.4l.36.16.36-.16c15.28-7.44,16.08-23.72,15.72-30.36l-.04-.76-.76-.04c-8.08-.24-12.32-2.32-14.48-4l-.56-.44Z" />
                         </svg> Enjoy a 30-day money-back guarantee</a>
-                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                            id="icon-svg-incentive-3-year" viewBox="0 0 40 40">
+                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
                             <path class="cls-1"
                                 d="M19.98,28.15185a4.25441,4.25441,0,0,1-1.35864-1.039l.91908-.87912a3.045,3.045,0,0,0,2.27772,1.039,2.15345,2.15345,0,0,0,1.31868-.35964,1.19553,1.19553,0,0,0,.51948-1.07892v-.31968a1.13678,1.13678,0,0,0-.5994-1.07892,2.75529,2.75529,0,0,0-1.27872-.31968h-.83916V22.957h.83916a2.02713,2.02713,0,0,0,1.11888-.27972.95859.95859,0,0,0,.47952-.87912v-.27972a.96439.96439,0,0,0-.43956-.87912,1.941,1.941,0,0,0-1.11888-.27972,2.86641,2.86641,0,0,0-1.15884.23976,3.47745,3.47745,0,0,0-1.039.71928l-.87912-.87912a4.60273,4.60273,0,0,1,1.3986-.959,4.24867,4.24867,0,0,1,1.7982-.35964,3.67707,3.67707,0,0,1,1.51848.27972,2.47265,2.47265,0,0,1,1.07893.7992,1.70681,1.70681,0,0,1,.3996,1.15884v.51948a1.40685,1.40685,0,0,1-.47952,1.039,2.08925,2.08925,0,0,1-1.07893.5994,2.4174,2.4174,0,0,1,.83916.31968,2.32315,2.32315,0,0,1,.71928.67932,1.55485,1.55485,0,0,1,.27972.91908V26.034a2.06474,2.06474,0,0,1-.43955,1.27872,2.8344,2.8344,0,0,1-1.19881.91908,3.99652,3.99652,0,0,1-1.71828.31968A5.21159,5.21159,0,0,1,19.98,28.15185Z" />
                             <path class="cls-1"
@@ -222,8 +219,7 @@
                             <path class="cls-1"
                                 d="M.83916,39.5005A.81942.81942,0,0,1,0,38.66134V10.44955a.81942.81942,0,0,1,.83916-.83916,1.0182,1.0182,0,0,1,.83916.67932V37.82218H34.36563a1.26592,1.26592,0,0,1,.51949.83916.81942.81942,0,0,1-.83916.83916Z" />
                         </svg> Lock in your price for 3 years</a>
-                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                            id="icon-svg-incentive-secure" viewBox="0 0 40 40">
+                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
                             <path class="cls-1"
                                 d="M39.63125,19.697H15.232a.43442.43442,0,0,0-.404.404V38.19845a.43442.43442,0,0,0,.404.404H39.59084a.40479.40479,0,0,0,.404-.404V20.101A.35167.35167,0,0,0,39.63125,19.697ZM38.379,21.31287v3.39326H16.48427V21.31287Zm0,4.484V28.2206H16.48427V25.79683ZM16.48427,36.90577V29.3113H38.379v7.59447Z" />
                             <path class="cls-1"
@@ -231,8 +227,7 @@
                             <path class="cls-1"
                                 d="M6.82959,12.26413v-.44434h.44435c5.53427-.12119,7.91765-1.37348,8.96794-2.38339l.32317-.32316.32319.28278c1.29265,1.0099,3.83763,2.26217,8.68516,2.42377h.44435l.04039.44434a23.55354,23.55354,0,0,1-.28276,5.3323h1.13109a24.18617,24.18617,0,0,0,.16157-6.38259.55765.55765,0,0,0-.52515-.48475c-5.85743,0-8.32159-1.61585-9.2911-2.50457-.12119-.0808-.404-.44435-.72713-.44435-.36357,0-.72713.44435-.72713.44435-.48475.72713-2.343,2.50457-9.4527,2.50457a.52714.52714,0,0,0-.52514.48475c-.0808.52515-1.49466,12.038,6.94814,18.42063V28.2206C6.95077,23.29227,6.62761,15.6978,6.82959,12.26413Z" />
                         </svg> Buy with flexibility and security</a>
-                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1"
-                            data-name="Layer 1" viewBox="0 0 40 40">
+                    <a class="buy-component__link" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
                             <polygon class="cls-1"
                                 points="24.3 11.119 24.3 14.392 21.023 14.392 21.023 15.876 24.3 15.876 24.3 19.15 25.78 19.15 25.78 15.876 29.054 15.876 29.054 14.392 25.78 14.392 25.78 11.119 24.3 11.119" />
                             <path class="cls-1"
