--- a/index.html
+++ b/index.html
@@ -72,12 +72,7 @@
                                 annually)</span></div>
                         <button class="select-term__button-add">
                             <h2>ADD TO CART</h2>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-                                <g id="utility/caret-right">
-                                    <path id="stroke" d="M9.5 6L15.5 12L9.5 18" stroke="currentColor" stroke-width="1.5"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                </g>
-                            </svg>
+                            <span class="ari-arrow"></span>
                         </button>
                         <div class="select-term__bottom">
                             <p>Credit and debit cards, PayPal, Pay by Bank and direct debit
@@ -96,11 +91,7 @@
                     <div class="select-term__first">
                         <div class="select-term__title-flex">
                             <h3>Revit cost: 10 tokens/day
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 330 330"
-                                    xmlns:v="https://vecta.io/nano">
-                                    <path
-                                        d="M165 0C74.019 0 0 74.02 0 165.001S74.019 330 165 330s165-74.018 165-164.999S255.981 0 165 0zm0 300c-74.44 0-135-60.56-135-134.999S90.56 30 165 30s135 60.562 135 135.001S239.439 300 165 300zm-.002-230c-11.026 0-19.996 8.976-19.996 20.009 0 11.023 8.97 19.991 19.996 19.991s19.996-8.968 19.996-19.991c0-11.033-8.97-20.009-19.996-20.009zm.002 70c-8.284 0-15 6.716-15 15v90c0 8.284 6.716 15 15 15s15-6.716 15-15v-90c0-8.284-6.716-15-15-15z" />
-                                </svg>
+                                <span class="ari-revit-cost"></span>
                             </h3>
                         </div>
 
@@ -139,7 +130,7 @@
                         </div>
                         <div class="select-term__bottom">
                             <p>Tokens expire 1 year from date of purchase. Not all products and features are available
-                                with Flex. <span>Learn more.</span></p>
+                                with Flex. <span class="learn-more">Learn more.</span></p>
                         </div>
                         <div class="select-term__bottom">
                             <p>Credit and debit cards, PayPal, Pay by Bank and direct debit
