--- a/index.html
+++ b/index.html
@@ -13,6 +13,56 @@
 
 <body>
 
+    <header class="header">
+        <div class="container">
+            <div class="header__left">
+                <div class="header__logo-company">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1619.27 166.13">
+                        <path fill="#FFF"
+                            d="M1619.27 4.34h-47.94l-57.42 64.12V4.34h-40.25l.2 157.84h40.05V102.2l54.46 59.98h50.9l-73.39-77.93 73.39-79.91zm-210.51 64.91l-36.7-4.14c-21.51-2.37-26.83-7.7-26.83-15 0-8.09 11.05-15.39 32.55-15.39 20.72 0 31.57 7.7 33.54 19.34h39.46c-2-33.35-30-54.06-70.83-54.06-48.53 0-73 19.33-73 53.46 0 27.82 16.18 40.85 49.72 44.4l37.29 3.94c14.21 1.58 20.72 7.11 20.72 14.21 0 8.09-9.47 15.39-32.36 15.39-26.44 0-37.09-6.71-38.87-20.13h-38.67c1.78 36.31 25.45 54.85 76.16 54.85 46.36 0 72.21-20.32 72.21-50.9 0-26.64-15.39-42.62-44.39-45.97zm-248.8 92.93h127.06v-34.13h-86.81V99.44h69.84V65.11h-69.84V38.47h86.81V4.34h-127.06v157.84zm-94.7-157.84h-73.79v157.84h73.79c56.63 0 72.21-21.11 72.21-80.11 0-55.44-14.99-77.73-72.21-77.73zm-1.62 123.72h-32V38.47h32c25.26 0 32.75 6.91 32.75 43.6.04 33.54-8.44 45.99-32.75 45.99zM882.17 0c-57.42 0-87.21 35.31-87.21 82.86 0 47.75 29.79 83.26 87.21 83.26 57.61 0 87.4-35.51 87.4-83.26 0-47.55-29.79-82.86-87.4-82.86zm0 130.61c-29.79 0-46.17-18.15-46.17-47.75 0-29 16.38-47.35 46.17-47.35 30 0 46.17 18.35 46.17 47.35 0 29.6-16.18 47.75-46.17 47.75zM646.59 38.47h50.9v123.71h40.25V38.47h50.71V4.34H646.59v34.13zM588 101.8c0 20.52-12.63 28.81-34.14 28.81-20.91 0-34.52-8.68-34.52-28.81V4.34h-40.25v102c0 45.58 40.64 59.78 74.77 59.78 33.94 0 74.38-14.2 74.38-59.78v-102H588zM361.3 4.34l-60.57 157.84h41.63l10.57-29.6h67.62l10.4 29.6h43L412.64 4.34zm3.61 94.7l22.11-61.87 21.74 61.89zM1.24 162.19l141.34-87.92h73.32a4.28 4.28 0 014.28 4.29 3.72 3.72 0 01-2 3.6l-69.42 41.62c-4.51 2.7-6.09 8.12-6.09 12.18l-.07 26.23h88.22V9.75a5.41 5.41 0 00-5.64-5.42H141L0 91.87v70.32z">
+                        </path>
+                    </svg>
+                </div>
+
+                <div class="header__search">
+                    <input class="header__input" type="search">
+                    <button class="header__btn-searh">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" version="1.1">
+                            <path
+                                d="M1009.4 938.6L712.7 642c52.3-67.4 83.5-152 83.5-243.9C796.2 178.2 618 0 398.1 0 178.2 0 0 178.2 0 398.1 0 618 178.2 796.2 398.1 796.2c91.9 0 176.5-31.2 243.9-83.5l296.6 296.6c19.5 19.5 51.2 19.5 70.7 0 19.6-19.5 19.6-51.1 0.1-70.7zM514.1 672.8c-36.7 15.5-75.7 23.4-116 23.4s-79.3-7.9-116-23.4c-35.5-15-67.4-36.5-94.8-63.9-27.4-27.4-48.9-59.3-63.9-94.8-15.5-36.7-23.4-75.7-23.4-116s7.9-79.3 23.4-116c15-35.5 36.5-67.4 63.9-94.8 27.4-27.4 59.3-48.9 94.8-63.9 36.7-15.5 75.7-23.4 116-23.4s79.3 7.9 116 23.4c35.5 15 67.4 36.5 94.8 63.9 27.4 27.4 48.9 59.3 63.9 94.8 15.5 36.7 23.4 75.7 23.4 116s-7.9 79.3-23.4 116c-15 35.5-36.5 67.4-63.9 94.8-27.4 27.4-59.3 48.9-94.8 63.9z" />
+                        </svg>
+                    </button>
+                </div>
+                <div class="header__right">
+                    <div class="header__baket">
+                        <button class="header__btn-basket" data-basket="shopp-basket">
+                            <svg viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0.25 1C0.25 0.585786 0.585786 0.25 1 0.25H1.89C2.51733 0.250347 3.1261 0.46517 3.61455 0.858828C4.10297 1.25247 4.44214 1.80126 4.57577 2.41416L4.7173 3.063H20C20.2211 3.063 20.4309 3.16054 20.5734 3.32957C20.7159 3.49859 20.7766 3.72188 20.7392 3.93978L19.2392 12.6858C19.1775 13.0458 18.8653 13.309 18.5 13.309H6.021C5.66838 13.309 5.36338 13.0634 5.28823 12.7188L3.11023 2.73384C3.04949 2.45523 2.8953 2.20568 2.67328 2.02674C2.45137 1.84789 2.175 1.75025 1.89 1.75M5.04449 4.563L6.62504 11.809H17.8677L19.1104 4.563H5.04449ZM0.25 1C0.25 1.41421 0.25 1.75 1.82746 1.7214ZM1.82746 1.7214L1.89 1.75ZM8 15.62C7.66848 15.62 7.35054 15.7517 7.11612 15.9861C6.8817 16.2205 6.75 16.5385 6.75 16.87C6.75 17.2015 6.8817 17.5195 7.11612 17.7539C7.35054 17.9883 7.66848 18.12 8 18.12C8.33152 18.12 8.64946 17.9883 8.88388 17.7539C9.1183 17.5195 9.25 17.2015 9.25 16.87C9.25 16.5385 9.1183 16.2205 8.88388 15.9861C8.64946 15.7517 8.33152 15.62 8 15.62ZM6.05546 14.9255C6.57118 14.4097 7.27066 14.12 8 14.12C8.72934 14.12 9.42882 14.4097 9.94454 14.9255C10.4603 15.4412 10.75 16.1407 10.75 16.87C10.75 17.5993 10.4603 18.2988 9.94454 18.8145C9.42882 19.3303 8.72935 19.62 8 19.62C7.27065 19.62 6.57118 19.3303 6.05546 18.8145C5.53973 18.2988 5.25 17.5993 5.25 16.87C5.25 16.1407 5.53973 15.4412 6.05546 14.9255ZM17 15.624C16.6685 15.624 16.3505 15.7557 16.1161 15.9901C15.8817 16.2245 15.75 16.5425 15.75 16.874C15.75 17.2055 15.8817 17.5235 16.1161 17.7579C16.3505 17.9923 16.6685 18.124 17 18.124C17.3315 18.124 17.6495 17.9923 17.8839 17.7579C18.1183 17.5235 18.25 17.2055 18.25 16.874C18.25 16.5425 18.1183 16.2245 17.8839 15.9901C17.6495 15.7557 17.3315 15.624 17 15.624ZM15.0555 14.9295C15.5712 14.4137 16.2707 14.124 17 14.124C17.7293 14.124 18.4288 14.4137 18.9445 14.9295C19.4603 15.4452 19.75 16.1447 19.75 16.874C19.75 17.6033 19.4603 18.3028 18.9445 18.8185C18.4288 19.3343 17.7293 19.624 17 19.624C16.2707 19.624 15.5712 19.3343 15.0555 18.8185C14.5397 18.3028 14.25 17.6033 14.25 16.874C14.25 16.1447 14.5397 15.4452 15.0555 14.9295Z"
+                                    fill="white" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="header__lang">
+                        <button class="header__btn-lang">
+                            <span class="ari-lang"></span>
+                            <h2>US</h2>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="header__sign-up">
+                    <button class="header__btn-sign-up">
+                        <span class="ari-people"></span>
+                        <h2>Sign Up</h2>
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
     <div class="container">
 
         <div class="buy-component">
@@ -180,6 +230,28 @@
 
         </div>
     </div>
+
+    <dialog class="basket">
+        <div class="basket__container">
+            <div class="basket__top-cart">
+                <p>Cart</p>
+                <button class="basket-btn-close">
+                    <svg viewBox="0 0 512 512">
+                        <g>
+                            <g>
+                                <polygon
+                                    points="512,59.076 452.922,0 256,196.922 59.076,0 0,59.076 196.922,256 0,452.922 59.076,512 256,315.076 452.922,512     512,452.922 315.076,256   " />
+                            </g>
+                        </g>
+                    </svg>
+                </button>
+            </div>
+
+            <div class="basket__new-sub">
+                New subscriptions
+            </div>
+        </div>
+    </dialog>
 
     <script src="./js/index.js"></script>
 
