last commit, dialog #1

--- a/index.html
+++ b/index.html
@@ -232,23 +232,51 @@
     </div>
 
     <dialog class="basket">
-        <div class="basket__container">
-            <div class="basket__top-cart">
-                <p>Cart</p>
-                <button class="basket-btn-close">
-                    <svg viewBox="0 0 512 512">
+        <div class="basket__top-cart">
+            <p>Cart</p>
+            <button class="basket-btn-close">
+                <svg viewBox="0 0 512 512">
+                    <g>
                         <g>
-                            <g>
-                                <polygon
-                                    points="512,59.076 452.922,0 256,196.922 59.076,0 0,59.076 196.922,256 0,452.922 59.076,512 256,315.076 452.922,512     512,452.922 315.076,256   " />
-                            </g>
+                            <polygon
+                                points="512,59.076 452.922,0 256,196.922 59.076,0 0,59.076 196.922,256 0,452.922 59.076,512 256,315.076 452.922,512     512,452.922 315.076,256   " />
                         </g>
-                    </svg>
-                </button>
+                    </g>
+                </svg>
+            </button>
+        </div>
+
+        <div class="basket__new-sub">
+            New subscriptions
+        </div>
+
+        <div class="basket__container">
+            <!-- <div class="basket__content">
+                <div class="basket__content-card">
+                    <div class="basket__content-top">
+                        <p>revit</p>
+                        <p class="total">$2,910.00</p>
+                    </div>
+                </div>
+            </div> -->
+
+            <div class="basket__footer">
+                <div class="basket__footer-top">
+                    <p>Subtotal</p>
+                    <h3>$2,910.00</h3>
+                </div>
+
+            <div class="basket__footer-desk">
+                    Tax is calculated at checkout
+                </div>
             </div>
 
-            <div class="basket__new-sub">
-                New subscriptions
+            <div class="basket__footer-button">
+                <button class="check-out">Check out</button>
+            </div>
+
+            <div class="basket__footer-bottom">
+                Credit and debit cards, PayPal, Pay by Bank and direct debit (ACH) accepted.
             </div>
         </div>
     </dialog>
