dialog #2 | js show+open dialog

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="header__search">
-                    <input class="header__input" type="search">
+                    <input class="header__input">
                     <button class="header__btn-searh">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" version="1.1">
                             <path
@@ -250,23 +250,23 @@
             New subscriptions
         </div>
 
-        <div class="basket__container">
-            <!-- <div class="basket__content">
-                <div class="basket__content-card">
-                    <div class="basket__content-top">
-                        <p>revit</p>
-                        <p class="total">$2,910.00</p>
-                    </div>
+        <div class="basket__content">
+            <div class="basket__content-card">
+                <div class="basket__content-top">
+                    <p>revit</p>
+                    <p class="total">$2,910.00</p>
                 </div>
-            </div> -->
+            </div>
+        </div>
 
+        <div class="basket__container">
             <div class="basket__footer">
                 <div class="basket__footer-top">
                     <p>Subtotal</p>
-                    <h3>$2,910.00</h3>
+                    <h3>$0,000.00</h3>
                 </div>
 
-            <div class="basket__footer-desk">
+                <div class="basket__footer-desk">
                     Tax is calculated at checkout
                 </div>
             </div>
