--- a/index.html
+++ b/index.html
@@ -245,18 +245,99 @@
                 </svg>
             </button>
         </div>
-
         <div class="basket__new-sub">
             New subscriptions
         </div>
 
         <div class="basket__content">
+
             <div class="basket__content-card">
                 <div class="basket__content-top">
-                    <p>revit</p>
-                    <p class="total">$2,910.00</p>
+                    <p><img src="./image/coins.png" alt="coins"> Flex</p>
+                    <h3 class="total">$300.00</h3>
+                </div>
+
+                <div class="basket__content-title">
+                    <p>Term</p>
+                    <p>Quanity</p>
+                </div>
+
+                <div class="basket__content-subtitle">
+                    <h3>1 year</h3>
+                    <h3>100</h3>
+                </div>
+
+                <div class="basket__content-btn-remove">
+                    <button class="btn-remove">Remove</button>
                 </div>
             </div>
+
+            <div class="basket__content-card">
+                <div class="basket__content-top">
+                    <p><img src="./image/coins.png" alt="coins"> Flex</p>
+                    <h3 class="total">$300.00</h3>
+                </div>
+
+                <div class="basket__content-title">
+                    <p>Term</p>
+                    <p>Quanity</p>
+                </div>
+
+                <div class="basket__content-subtitle">
+                    <h3>1 year</h3>
+                    <h3>100</h3>
+                </div>
+
+                <div class="basket__content-btn-remove">
+                    <button class="btn-remove">Remove</button>
+                </div>
+            </div>
+
+            <div class="basket__content-card">
+                <div class="basket__content-top">
+                    <p><img src="./image/revit.png" alt="coins"> Flex</p>
+                    <h3 class="total">$300.00</h3>
+                </div>
+
+                <div class="basket__content-title">
+                    <p>Term</p>
+                    <p>Quanity</p>
+                </div>
+
+                <div class="basket__content-subtitle">
+                    <h3>1 year</h3>
+                    <h3>100</h3>
+                </div>
+
+                <div class="basket__content-btn-remove">
+                    <button class="btn-remove">Remove</button>
+                </div>
+            </div>
+
+            <div class="basket__content-card">
+                <div class="basket__content-top">
+                    <p><img src="./image/revit.png" alt="coins"> Flex</p>
+                    <h3 class="total">$300.00</h3>
+                </div>
+
+                <div class="basket__content-title">
+                    <p>Term</p>
+                    <p>Quanity</p>
+                </div>
+
+                <div class="basket__content-subtitle">
+                    <h3>1 year</h3>
+                    <h3>100</h3>
+                </div>
+
+                <div class="basket__content-btn-remove">
+                    <button class="btn-remove">Remove</button>
+                </div>
+            </div>
+
+
+        </div>
+
         </div>
 
         <div class="basket__container">
