input change + js

--- a/timing.html
+++ b/timing.html
@@ -15,7 +15,7 @@
 
     <div class="container">
 
-        <div class="timing">
+        <div class="timing" style="--car-pos-tr-duration: 10s">
             <div class="timing__top">Timing Function</div>
             
             <div class="timing__card">
